kubernetes/applications/sing-box/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sing-box
  namespace: apps
spec:
  selector:
    matchLabels:
      app: sing-box
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: sing-box
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: sing-box
          image: ghcr.io/sagernet/sing-box:latest@sha256:c8b67944345dc84a226b648a71f854818606eae0813c4e6a452f192ef821b5b8
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args: ["run", "-c", "/config/config.json"]
          ports:
            - containerPort: 443
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tls
              mountPath: /tls
              readOnly: true
      volumes:
        - name: config-template
          configMap:
            name: sing-box-config
        - name: config
          emptyDir: {}
        - name: tls
          secret:
            secretName: wg-ildoc-it-tls
